[gd_scene load_steps=4 format=2]

[ext_resource path="res://Common/Res/UI/Themes/DefaultTheme.tres" type="Theme" id=1]
[ext_resource path="res://Common/Instances/UI/PauseMenu.gd" type="Script" id=2]
[ext_resource path="res://Assets/UI/SoundIcon.png" type="Texture" id=3]

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Center" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vbox" type="VBoxContainer" parent="Center"]
margin_left = 654.0
margin_top = 375.0
margin_right = 945.0
margin_bottom = 525.0

[node name="ResumeBtn" type="Button" parent="Center/Vbox"]
margin_right = 291.0
margin_bottom = 73.0
text = "Resume"

[node name="MainMenuBtn" type="Button" parent="Center/Vbox"]
margin_top = 77.0
margin_right = 291.0
margin_bottom = 150.0
text = "Main Menu"

[node name="SoundCheckBox" type="CheckBox" parent="."]
modulate = Color( 1, 1, 1, 0.607843 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -128.0
margin_top = 65.0
margin_right = -64.0
margin_bottom = 129.0
pressed = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundIcon" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.607843 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -128.0
margin_top = 1.0
margin_right = -64.0
margin_bottom = 65.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Center/Vbox/ResumeBtn" to="." method="_on_ResumeBtn_pressed"]
[connection signal="pressed" from="Center/Vbox/MainMenuBtn" to="." method="_on_MainMenuBtn_pressed"]
[connection signal="toggled" from="SoundCheckBox" to="." method="_on_SoundCheckBox_toggled"]
